[gd_scene load_steps=31 format=3 uid="uid://blidgxfufyie0"]

[ext_resource type="PackedScene" uid="uid://c8x3ximwc4liu" path="res://Cenas/Main/main.tscn" id="1_apn76"]
[ext_resource type="Script" path="res://Cenas/Main/Scripts/level_2.gd" id="2_k1d5y"]
[ext_resource type="Texture2D" uid="uid://dtknrak1iyrt2" path="res://Sprites em PNG E GIF/Tilesets/Level 2.png" id="2_pjjk2"]
[ext_resource type="PackedScene" uid="uid://bg0k6a2ixnxps" path="res://Cenas/Poções/poison_potion.tscn" id="5_8dtia"]
[ext_resource type="PackedScene" uid="uid://b0fwdlvw2otat" path="res://Cenas/Poções/fire_potion.tscn" id="6_561ra"]
[ext_resource type="PackedScene" uid="uid://b18om3fc5wajc" path="res://Cenas/Obstáculos/poison_area.tscn" id="7_n7m3b"]
[ext_resource type="PackedScene" uid="uid://qsh8d251vift" path="res://Cenas/Inimigos/Crawler.tscn" id="8_o310n"]
[ext_resource type="PackedScene" uid="uid://cchrs1slksexg" path="res://Cenas/Obstáculos/fire_area.tscn" id="8_v7t05"]
[ext_resource type="PackedScene" uid="uid://cccua4hkv5u2s" path="res://Cenas/Inimigos/Poison_Snake.tscn" id="9_60t1m"]
[ext_resource type="PackedScene" uid="uid://rwaj7o3a4qqw" path="res://Cenas/Inimigos/angel.tscn" id="10_wnd5j"]
[ext_resource type="PackedScene" uid="uid://byxsskwrgvavp" path="res://Cenas/Inimigos/Spider.tscn" id="11_wngbm"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ecatn"]
polygon = PackedVector2Array(0, 8, 0, 0, 8, 0, 8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_xrwp0"]
polygon = PackedVector2Array(0, 8, 0, -8, 8, -8, 8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ykis7"]
polygon = PackedVector2Array(8, 0, 0, 0, 0, -8, 8, -8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_3s45l"]
polygon = PackedVector2Array(-8, 0, 8, 0, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_itj7p"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_p2fiv"]
polygon = PackedVector2Array(8, 0, -8, 0, -8, -8, 8, -8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_qtihj"]
polygon = PackedVector2Array(-8, 0, 0, 0, 0, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4ybeq"]
polygon = PackedVector2Array(0, -8, 0, 8, -8, 8, -8, -8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_7romq"]
polygon = PackedVector2Array(0, -8, 0, 0, -8, 0, -8, -8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_pcqtc"]
polygon = PackedVector2Array(8, 8, -8, 8, -8, -8, 0, -8, 0, 0, 8, 0)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_fr0br"]
polygon = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 0, 0, 0, 0, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_mdwl5"]
polygon = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, 0, 0, 0, 0, -8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_2eoet"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, 0, 8, 0, 0, -8, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kwjob"]
texture = ExtResource("2_pjjk2")
0:0/0 = 0
0:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_ecatn")
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 8, 0, 0, 8, 0, 8, 8)
1:0/0 = 0
1:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_3s45l")
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, 8, 0, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_qtihj")
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, 0, 0, 0, 8, -8, 8)
3:0/0 = 0
3:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_pcqtc")
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 0, -8, 0, 0, 8, 0)
4:0/0 = 0
4:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_mdwl5")
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, 0, 0, 0, 0, -8)
0:1/0 = 0
0:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_xrwp0")
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 8, 0, -8, 8, -8, 8, 8)
1:1/0 = 0
1:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_itj7p")
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_4ybeq")
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -8, 0, 8, -8, 8, -8, -8)
3:1/0 = 0
3:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_fr0br")
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 0, 0, 0, 0, 8)
4:1/0 = 0
4:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_2eoet")
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 0, 8, 0, 0, -8, 0)
0:2/0 = 0
0:2/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_ykis7")
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, 0, 0, 0, -8, 8, -8)
1:2/0 = 0
1:2/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_p2fiv")
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, -8, 0, -8, -8, 8, -8)
2:2/0 = 0
2:2/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_7romq")
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -8, 0, 0, -8, 0, -8, -8)

[sub_resource type="TileSet" id="TileSet_yyebi"]
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 6
sources/0 = SubResource("TileSetAtlasSource_kwjob")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kn3mb"]
size = Vector2(228, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cto2v"]
size = Vector2(77, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7e71k"]
size = Vector2(456, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nvd6m"]
size = Vector2(622, 42)

[node name="Main" instance=ExtResource("1_apn76")]
script = ExtResource("2_k1d5y")

[node name="CEO_OF_POSITIONS#Start_pos" type="Marker2D" parent="." index="0" groups=["start_pos"]]
position = Vector2(189, 153)

[node name="Plataforms" type="TileMap" parent="." index="4"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_yyebi")
format = 2
layer_0/name = "Plataformas"
layer_0/tile_data = PackedInt32Array(655367, 65536, 2, 655368, 65536, 2, 655369, 65536, 2, 655370, 65536, 2, 655371, 65536, 2, 655372, 65536, 2, 655373, 65536, 2, 655374, 65536, 2, 655375, 65536, 2, 655376, 65536, 2, 655377, 65536, 2, 655378, 65536, 2, 655379, 65536, 2, 655380, 65536, 2, 655381, 65536, 2, 655382, 65536, 2, 655383, 65536, 2, 7, 65536, 2, 8, 65536, 2, 9, 65536, 2, 10, 65536, 2, 11, 65536, 2, 12, 65536, 2, 13, 65536, 2, 14, 65536, 2, 15, 65536, 2, 16, 65536, 2, 17, 65536, 2, 18, 65536, 2, 19, 65536, 2, 20, 65536, 2, 21, 65536, 2, 22, 65536, 2, 23, 65536, 2, 393232, 65536, 2, 393233, 65536, 2, 262163, 65536, 2, 262162, 65536, 2, 131092, 65536, 0, 131093, 65536, 0, 131094, 65536, 0, 131095, 65536, 0, 131096, 65536, 0, 131097, 65536, 0, 131098, 65536, 0, 131099, 65536, 0, 131100, 65536, 0, 131101, 65536, 0, 131102, 65536, 0, 131103, 65536, 0, 131104, 262144, 0, 24, 65536, 2, 25, 65536, 2, 26, 65536, 2, 27, 65536, 2, 28, 65536, 2, 29, 65536, 2, 30, 65536, 2, 31, 65536, 2, 32, 262144, 1, 65568, 0, 1, 655384, 196608, 0, 720921, 196608, 0, 786458, 196608, 0, 851995, 196608, 0, 917532, 196608, 0, 983069, 196608, 0, 1048606, 196608, 0, 1114143, 196608, 0, 1179680, 196608, 0, 1245217, 196608, 0, 1310754, 196608, 0, 1376291, 196608, 0, 1441828, 196608, 0, 1507365, 196608, 0, 1572902, 196608, 0, 720920, 262144, 1, 786457, 262144, 1, 851994, 262144, 1, 917531, 262144, 1, 983068, 262144, 1, 1048605, 262144, 1, 1114142, 262144, 1, 1179679, 262144, 1, 1245216, 262144, 1, 1310753, 262144, 1, 1376290, 262144, 1, 1441827, 262144, 1, 1507364, 262144, 1, 1572901, 262144, 1, 1638438, 262144, 1, 1572903, 65536, 0, 1572904, 65536, 0, 1572905, 65536, 0, 1572906, 65536, 0, 1572907, 65536, 0, 1572908, 65536, 0, 1572909, 65536, 0, 1638439, 196608, 1, 1572922, 65536, 0, 1572923, 65536, 0, 1572924, 65536, 0, 1572925, 65536, 0, 1572926, 65536, 0, 1572927, 65536, 0, 1179684, 65536, 0, 1179685, 65536, 0, 1179686, 65536, 0, 1048617, 65536, 0, 1048618, 65536, 0, 1048619, 65536, 0, 917549, 65536, 0, 917550, 65536, 0, 917551, 65536, 0, 720945, 65536, 0, 720946, 65536, 0, 720947, 65536, 0, 655414, 65536, 0, 655415, 65536, 0, 655416, 65536, 0, 655417, 65536, 0, 655418, 65536, 0, 655419, 65536, 0, 655420, 65536, 0, 655421, 65536, 0, 655422, 65536, 0, 655423, 65536, 0, 655424, 65536, 0, 655425, 65536, 0, 655426, 65536, 0, 655427, 65536, 0, 655428, 65536, 0, 720939, 65536, 0, 720938, 65536, 0, 720937, 65536, 0, 720936, 65536, 0, 524326, 65536, 0, 524325, 65536, 0, 327717, 65536, 0, 327716, 65536, 0, 327715, 65536, 0, 33, 65536, 2, 34, 65536, 2, 35, 65536, 2, 36, 65536, 2, 37, 65536, 2, 38, 65536, 2, 39, 65536, 2, 40, 65536, 2, 41, 65536, 2, 42, 65536, 2, 43, 65536, 2, 44, 65536, 2, 45, 65536, 2, 46, 65536, 2, 47, 65536, 2, 48, 65536, 2, 49, 65536, 2, 50, 65536, 2, 51, 65536, 2, 52, 65536, 2, 53, 65536, 2, 54, 65536, 2, 55, 65536, 2, 56, 65536, 2, 57, 65536, 2, 196648, 65536, 2, 196649, 65536, 2, 196650, 65536, 2, 196651, 65536, 2, 196652, 65536, 2, 196653, 65536, 2, 196654, 65536, 2, 196655, 65536, 2, 196656, 65536, 2, 196657, 65536, 2, 196658, 65536, 2, 196659, 65536, 2, 196660, 65536, 2, 196661, 65536, 2, 196662, 65536, 2, 196663, 65536, 2, 196664, 65536, 2, 196665, 65536, 2, 58, 65536, 2, 59, 65536, 2, 60, 65536, 2, 61, 65536, 2, 62, 65536, 2, 63, 65536, 2, 64, 65536, 2, 65, 65536, 2, 66, 65536, 2, 67, 65536, 2, 68, 65536, 2, 69, 65536, 2, 70, 65536, 2, 71, 65536, 2, 72, 65536, 2, 73, 65536, 2, 74, 65536, 2, 75, 65536, 2, 76, 65536, 2, 77, 65536, 2, 78, 65536, 2, 79, 65536, 2, 80, 65536, 2, 81, 65536, 2, 82, 65536, 2, 1441839, 65536, 2, 1441840, 65536, 2, 1310772, 65536, 2, 1310773, 65536, 2, 1507384, 65536, 2, 2621487, 65536, 2, 2621488, 65536, 2, 2621489, 65536, 2, 2621490, 65536, 2, 2621491, 65536, 2, 2621492, 65536, 2, 2621493, 65536, 2, 2621494, 65536, 2, 2621495, 65536, 2, 2621496, 65536, 2, 2621497, 65536, 2, 2621498, 65536, 2, 2621486, 65536, 2, 2228282, 0, 1, 2162746, 0, 1, 2097210, 0, 1, 2031674, 0, 1, 1966138, 0, 1, 1900602, 0, 1, 1835066, 0, 1, 1769530, 0, 1, 1703994, 0, 1, 1638458, 0, 1, 2555949, 196608, 0, 2490413, 131072, 1, 2424877, 131072, 1, 2359341, 131072, 1, 2293805, 131072, 1, 2228269, 131072, 1, 2162733, 131072, 1, 2097197, 131072, 1, 2031661, 131072, 1, 1966125, 131072, 1, 1900589, 131072, 1, 1835053, 131072, 1, 1769517, 131072, 1, 1703981, 131072, 1, 1638445, 131072, 1, 2621485, 65536, 2, 1441857, 65536, 0, 1441858, 65536, 0, 1310788, 65536, 0, 1310789, 65536, 0, 1179719, 65536, 0, 1179720, 65536, 0, 1048650, 65536, 0, 1048651, 65536, 0, 655429, 65536, 0, 655430, 65536, 0, 655431, 65536, 0, 655432, 65536, 0, 655433, 65536, 0, 655436, 65536, 0, 655437, 65536, 0, 655438, 65536, 0, 655439, 65536, 0, 655440, 65536, 0, 655441, 65536, 0, 655442, 65536, 0, 655443, 65536, 0, 655444, 65536, 0, 655445, 65536, 0, 655446, 65536, 0, 655447, 65536, 0, 852042, 65536, 0, 83, 65536, 2, 84, 65536, 2, 85, 65536, 2, 86, 65536, 2, 87, 65536, 2, 88, 65536, 2, 89, 65536, 2, 90, 65536, 2, 91, 65536, 2, 92, 65536, 2, 93, 65536, 2, 94, 65536, 2, 95, 65536, 2, 96, 65536, 2, 97, 262144, 1, 655448, 65536, 0, 655449, 65536, 0, 655450, 65536, 0, 655451, 65536, 0, 655452, 65536, 0, 655453, 65536, 0, 655454, 65536, 0, 655455, 65536, 0, 655456, 65536, 0, 655457, 262144, 0, 65633, 0, 1, 131169, 0, 1, 196705, 0, 1, 262241, 0, 1, 327777, 0, 1, 393313, 0, 1, 458849, 0, 1, 524385, 0, 1, 589921, 0, 1, 2293818, 0, 1, 2359355, 196608, 0, 2359354, 0, 1, 2359356, 65536, 0, 2359357, 65536, 0, 2359358, 65536, 0, 2359359, 65536, 0, 2359360, 65536, 0, 2621499, 65536, 2, 2621500, 65536, 2, 2621501, 65536, 2, 2621502, 65536, 2, 2621503, 65536, 2, 2621504, 65536, 2, 2555968, 262144, 0, 2424896, 262144, 1, 2490432, 0, 1)

[node name="Poison_Potion" parent="Items" index="0" instance=ExtResource("5_8dtia")]
position = Vector2(456, 26)

[node name="Fire_Potion" parent="Items" index="1" instance=ExtResource("6_561ra")]
position = Vector2(768, 33)

[node name="Poison_Area" parent="Areas/Poison" index="0" instance=ExtResource("7_n7m3b")]
position = Vector2(369, 104)
scale = Vector2(1, 1.08)
collision_layer = 32

[node name="Fire_Area" parent="Areas/Fire" index="0" instance=ExtResource("8_v7t05")]
position = Vector2(937, 88)
scale = Vector2(0.933628, 1.52186)
collision_layer = 32

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="." index="8"]
energy = 0.25
shadow_enabled = true

[node name="Normal Finish" type="Area2D" parent="." index="9"]
position = Vector2(1446, 133)
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Normal Finish" index="0"]
shape = SubResource("RectangleShape2D_kn3mb")

[node name="Finish_to_Final_Level" type="Area2D" parent="." index="10"]
position = Vector2(992, 618)
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Finish_to_Final_Level" index="0"]
position = Vector2(1.5, -2)
shape = SubResource("RectangleShape2D_cto2v")

[node name="Death_Zone_1" type="Area2D" parent="." index="11"]
position = Vector2(-24, 222)
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death_Zone_1" index="0"]
shape = SubResource("RectangleShape2D_7e71k")

[node name="Death_Zone_2" type="Area2D" parent="." index="12"]
position = Vector2(1255, 496)
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death_Zone_2" index="0"]
shape = SubResource("RectangleShape2D_nvd6m")

[node name="Crawler" parent="Enemies/Crawler" index="0" instance=ExtResource("8_o310n")]
position = Vector2(768, 618)

[node name="Crawler2" parent="Enemies/Crawler" index="1" instance=ExtResource("8_o310n")]
position = Vector2(880, 618)

[node name="Snake" parent="Enemies/Poison_Snake" index="0" instance=ExtResource("9_60t1m")]
position = Vector2(1024, 160)

[node name="Snake2" parent="Enemies/Poison_Snake" index="1" instance=ExtResource("9_60t1m")]
position = Vector2(808, 41)

[node name="Angel" parent="Enemies/Angel" index="0" instance=ExtResource("10_wnd5j")]
position = Vector2(832, 624)

[node name="Spider" parent="Enemies/Spider" index="0" instance=ExtResource("11_wngbm")]
position = Vector2(832, 256)

[node name="Spider2" parent="Enemies/Spider" index="1" instance=ExtResource("11_wngbm")]
position = Vector2(696, 336)

[connection signal="use_item" from="Items/Poison_Potion" to="Potion_and_Effects_Manager" method="_use_item"]
[connection signal="use_item" from="Items/Fire_Potion" to="Potion_and_Effects_Manager" method="_use_item"]
[connection signal="body_entered" from="Areas/Poison/Poison_Area" to="Potion_and_Effects_Manager" method="_on_poison_area_body_entered"]
[connection signal="body_entered" from="Areas/Fire/Fire_Area" to="Potion_and_Effects_Manager" method="_on_fire_area_body_entered"]
[connection signal="body_entered" from="Normal Finish" to="." method="finish_game"]
[connection signal="body_entered" from="Finish_to_Final_Level" to="." method="secret_finish"]
[connection signal="body_entered" from="Death_Zone_1" to="." method="death_player"]
[connection signal="body_entered" from="Death_Zone_2" to="." method="death_player"]
